Update ParseOther.java